# royale-arena

./: .gitignore  DEPLOYMENT.md  LICENSE  QWEN.md  README.md  docker-compose.yml  modification-report.md  royale-arena.code-workspace  rules_config_example.json  shop-feature-changes.md  tmp_test_fail.txt
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  QWEN.md  task-list.md  test_module_refactor_list.md
backend/.sqlx/: query-0862c372c842b8e55460df0e31b997d30831e0ea77eefd238c6a485c1c4afeec.json  query-0a127603a0939dfab34ab3bb85b4e102a289bcf6cc709205c8e376075e071884.json  query-108c7afc9847f3cbf2e4c3f88cd8db2909043d89f0418d70d45697ca2ac68c96.json  query-1813fc5207b705a5c6ba81d4605c0953f205831c634f6155d6d54580c6d39d52.json  query-1c0955baa2689df4b2167b52f514952117a93433c159a72e89fecb724ce7c4ef.json  query-1fd03baeef534eb52b3fe7f04acddc395223f922111cf80f1b8759207f518639.json  query-22f79c242b12d5748b5849ef7a8b889b02ba9fcbbe1dfc5a63cf529953839012.json  query-299a1d38403b6bde83a6ee03f1abc0117bf23031c438404cde24c36d2a451e21.json  query-2b5063395a386dc3c035ef4822bccf6c8ba2c1b7eb6509f608ba1d1a0b850b2c.json  query-31a2951c60a0134b9e791e9fae1c6ea65019a317ad39a7ea423edea071ba95d7.json  query-31dfd4f5037835a2d6771a5367b1d14cebe6d2550d8249484f6c8e14d7fca710.json  query-48cd8bf09739be11f1ac024894d6e03721bd584a5a87ee29d020afa62b6ee453.json  query-4ea50fa75fb139de5c2363e0b0c6e33ef9ca7fa35f12db80635067773056fce5.json  query-51e5365cc77ff7762c184a0b47ab7dcf40b2744b30a36943885440e35b4fd0ef.json  query-5afc85561c43524414644947b50fd616f33828ffeb6ae32df56f2e09e1c15db9.json  query-5de72308c507437ce1cd62d86385f97702a41a0a92829d7443e5b7e02e2f10ad.json  query-67ac8a7b7abc606861d3e6732f900c237ba50e153784847bda987ad28179a45a.json  query-68234be856de26018395d89105312a813475eb6c1756151f5673404af4663f37.json  query-6ea98f7bdfe77694409efa63b78b2ad3cdbd416f9a082bec7cc68e64599a296b.json  query-70559e8769644b2f4c0a61d351993f335f7abf6e6421aa547504f0fb91825a85.json  query-76c691fcd8baa345eff140ceb96999c422a1c574a189bfe575b1e8bd16d434b2.json  query-867a9a22c304da2ea0111118be26d0246b813994352c5eb026ce3b92cf742d8b.json  query-93f51927ed7d5ff70561cdd189c69aea31abba29369733f41d8e2997f9ad3986.json  query-980b329c44e3d2bd11cfbffee2bb7f96e450edfce6a803c370b26945eb6cd69e.json  query-9842e0fbae0cd418d317bb46c3770737ed1118ff8f3f1eebab77d1670f7dbea5.json  query-9964aaf0144259f89d54d98083caf023518473e337de032cf5fd028edf6e8c5c.json  (+21 more)
backend/json_sample/: return.json
(+336 files in other folders)
