[package]
name = "royale-arena-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "init_admin_users"
path = "src/bin/init_admin_users.rs"

[dependencies]
# Web框架 - 替换actix-web
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

# 数据库 - 替换mysql crate
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具库
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17.1"
dotenvy = "0.15"

# JWT认证
jsonwebtoken = "9.3.1"