[package]
name = "royale-arena-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "init_admin_users"
path = "src/bin/init_admin_users.rs"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
mysql = "24.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
dotenvy = "0.15"